canary/canary-rollout.yaml
# apiVersion: argoproj.io/v1alpha1
# kind: Rollout
# metadata:
#   name: canary-demo
# spec:
#   replicas: 10
#   revisionHistoryLimit: 1
#   selector:
#     matchLabels:
#       app: canary-demo
#   template:
#     metadata:
#       labels:
#         app: canary-demo
#     spec:
#       containers:
#       - name: canary-demo
#         image: argoproj/rollouts-demo:blue 
#         imagePullPolicy: Always
#         ports:
#         - name: http
#           containerPort: 8080
#           protocol: TCP
#         resources:
#           requests:
#             memory: 32Mi
#             cpu: 5m
#   strategy:
#     canary:
#       canaryService: canary-demo-preview
#       steps:
#       - setWeight: 20
#       - pause: {duration: 10s}
#       - setWeight: 40
#       - pause: {duration: 20s}
#       - setWeight: 60
#       - pause: {duration: 30s}
#       - setWeight: 80
#       - pause: {duration: 1h}

---

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 10
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - name: canary-demo
        image: ghcr.io/gbaeke/super:1.0.2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary-demo-preview
      stableService: canary-demo
      steps:
      - setWeight: 20
      - pause: {duration: 10s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 30s}
      - setWeight: 80
      - pause: {duration: 10s}
      trafficRouting:
        nginx:
          stableIngress: canary-demo
